--- a/main.tex
+++ b/main.tex
@@ -1,22 +1,21 @@
-\documentclass[a5paper]{book}
+\documentclass[twoside,a5paper]{book}
 
 \usepackage{amsmath}
 \usepackage{hyperref}
 \usepackage{fontspec}
 \usepackage{unicode-math}
-\usepackage{hologo}
 \usepackage{graphicx}
 
 \begin{document}
 
 \setmathfont{STIXTwoMath}[
   Extension={.otf},
-  Path=./,
+  Path={./fonts/},
   Scale=1]
 
 \setmainfont{STIXTwoText}[
   Extension={.otf},
-  Path=./,
+  Path={./fonts/},
   UprightFont={*-Regular},
   BoldFont={*-Bold},
   ItalicFont={*-Italic},
@@ -27,64 +26,8 @@
 
 \maketitle
 
-\section*{About this book}
-
-This book comprises the lectures notes of the course PO-2XX Data Science Project.
-I hope someday it becomes an actual book. For now, beware many typos, grammar errors, ugly
-typesetting, disconnected material, etc.
-
-Also, it is important to highlight that:
-\begin{itemize}
-  \item This is not a Machine Learning book, and I do not intend to explain how specific
-    ML algorithms work.
-  \item This is kind of an introductory material on Data Science.  Although I will
-    introduce the fundamental concepts, I expect you have strong mathematical and
-    statistics background.
-  \item An artificial constraint I have imposed in the material (for the sake of the
-    course) is that I will only consider \emph{predictive models}, more specifically
-    inductive ones. I will not address topics such as clustering, association-rules
-    mining, transductive learning, anomaly detection, time series forecasting, reinforced
-    learning, etc.
-\end{itemize}
-
-I have decided to work on this material because the books I like on Data Science are
-either
-\begin{itemize}
-  \item too broad and too shallow, in the sense they hide many mathematical foundations
-    and focus on just explaining what Data Science is and where it is applied;
-  \item too tool-centric, in the sense that they focus only on a specific toolbox or
-    programming language; or
-  \item too machine-learning-y, exposing many machine learning algorithms and missing the
-    foundations of learning.
-\end{itemize}
-
-So\dots I expect my approach on the subject provide:
-\begin{itemize}
-  \item awareness of all steps in a data science project;
-  \item deeper focus (than most books) on data transformation, describing the semantics of the data set
-    operators instead of restraining ourselves with a specific tool;
-  \item deeper focus (than most books) on why machine learning works, increase awareness of its pitfalls and
-    limitations;
-  \item deeper focus (than most books) on correct evaluation (pre-deployment) of machine learning models.
-\end{itemize}
-
-This book will cover the following material:
-\begin{itemize}
-  \item Brief history of Data Science.
-  \item Background (Statistics).
-  \item Fundamental data concepts.
-  \item Stages in a Data Science project.
-  \item Data Infrastructure.
-  \item Data integration from multiple sources.
-  \item Data engineering and shaping.
-  \item Inductive learning and principles of Statistical Learning Theory.
-  \item Application of Machine Learning models in real-world problems.
-  \item Experimental planning for Data Science.
-  \item Model evaluation and Bayesian analysis.
-  \item Documentation and deployment.
-  \item Ethical and legal issues in Data Science.
-  \item Privacy-preserving computational approaches.
-\end{itemize}
+\input{about}
+\input{inductive}
 
 \section*{Some examples}
 
@@ -97,8 +40,6 @@ This book will cover the following material:
  &= 12-\frac{7}{4}\int_0^2 \left( e^{-4t_1}+e^{4t_1-8} \right)\,dt_1\\
  &\vdots %
 \end{align*}
-
-
 
 \begin{equation}
   x = a_0 + \frac{1}{\displaystyle a_1
