--- a/about.tex
+++ b/about.tex
@@ -1,6 +1,6 @@
 \chapter*{About this book}
 
-This book comprises the lectures notes of the course PO-2XX Data Science Project.
+This book comprises the lectures notes of the course PO-235 Data Science Project.
 I hope someday it becomes an actual book. For now, beware many typos, grammar errors, ugly
 typesetting, disconnected material, etc.
 
@@ -8,7 +8,7 @@ Also, it is important to highlight that:
 \begin{itemize}
   \item This is not a Machine Learning book, and I do not intend to explain how specific
     ML algorithms work.
-  \item This is kind of an introductory material on Data Science.  Although I will
+  \item This contains some kind of introductory material on Data Science.  Although I will
     introduce the fundamental concepts, I expect you have strong mathematical and
     statistics background.
   \item An artificial constraint I have imposed in the material (for the sake of the
@@ -29,14 +29,15 @@ either
     foundations of learning.
 \end{itemize}
 
-So\dots I expect my approach on the subject provide:
+So\dots, I expect my approach on the subject provide:
 \begin{itemize}
   \item awareness of all steps in a data science project;
-  \item deeper focus (than most books) on data transformation, describing the semantics of the data set
+  \item deeper focus (than most books) on data transformation, describing the semantics of dataset
     operators instead of restraining ourselves with a specific tool;
-  \item deeper focus (than most books) on why machine learning works, increase awareness of its pitfalls and
+  \item deeper focus (than most books) on why machine learning works, increasing awareness of its pitfalls and
     limitations;
-  \item deeper focus (than most books) on correct evaluation (pre-deployment) of machine learning models.
+  \item deeper focus (than most books) on correct evaluation and validation
+    (pre-deployment) of machine learning models.
 \end{itemize}
 
 This book will cover the following material:
