--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
   ItalicFont={*-Italic},
   BoldItalicFont={*-BoldItalic}]
 
-\title{Data Science Project}
+\title{PO-235 Data Science Project}
 \author{Filipe A. N. Verri}
 
 \maketitle
