Some history topics.

--- a/history.tex
+++ b/history.tex
@@ -14,7 +14,7 @@ His ideas and concepts laid the groundwork for the way we think about programmin
 processing today.
 
 Naur disliked the term computer science and suggested it be called datalogy or data
-science.  Since the 1960s, the subject was practised in Denmark under Peter
+science.  In the 1960s, the subject was practised in Denmark under Peter
 Naur's term datalogy, which means the science of data and data processes.
 
 He coined this term to emphasize the importance of data as a fundamental component of
@@ -32,3 +32,26 @@ process.''\footnote{I. H. Gould (ed.): ‘IFIP guide to concepts and terms in da
 processing’, North-Holland Publ. Co., Amsterdam, 1971.} Note however that his view of the
 science only ``deals with data [\dots] while the relation of data to what they represent
 is delegated to other fields and sciences.''
+
+TODO:
+In the late 1980s and early 1990s, William S. Cleveland, a prominent statistician, used
+the term ``data science" in his work to describe the emerging discipline that combined
+elements of statistics, computer science, and domain expertise. His efforts were aimed at
+developing methodologies for exploring and analyzing complex datasets, which laid the
+foundation for what we now recognize as data science.
+
+\section{Historical markers}
+
+\section{Timeline}
+
+\subsection{Timeline of data collection}
+
+\begin{itemize}
+  \item Pre-digital Age
+  \item Digital Age
+  \item Formal Age
+  \item Integrated Age
+  \item Ubiquitous Age
+\end{itemize}
+
+\subsection{Timeline of data analysis}
