Working on SLT.

--- a/about.tex
+++ b/about.tex
@@ -12,7 +12,7 @@ Also, it is important to highlight that:
     introduce the fundamental concepts, I expect you have strong mathematical and
     statistics background.
   \item An artificial constraint I have imposed in the material (for the sake of the
-    course) is that I will only consider \emph{predictive models}, more specifically
+    course) is that I will only consider \emph{predictive methods}, more specifically
     inductive ones. I will not address topics such as clustering, association-rules
     mining, transductive learning, anomaly detection, time series forecasting, reinforced
     learning, etc.
