--- a/history.tex
+++ b/history.tex
@@ -7,6 +7,8 @@ sciences.
 
 \section{The term ``Data Science''}
 
+\paragraph{Peter Naur.}
+
 The term ``data science'' itself was coined in the 1960s by Peter Naur (/naʊə/). Naur was
 a Danish computer scientist and mathematician who made significant contributions to the
 field of computer science, including his work on the development of programming languages.
