Working on definitions.

--- a/about.tex
+++ b/about.tex
@@ -38,12 +38,13 @@ So\dots, I expect my approach on the subject provide:
     limitations;
   \item deeper focus (than most books) on correct evaluation and validation
     (pre-deployment) of machine learning models.
+  \item deeper understanding (than most books) on how and why learning methods work.
 \end{itemize}
 
 This book will cover the following material:
 \begin{itemize}
   \item Brief history of Data Science.
-  \item Background (Statistics).
+  \item Background topics (Statistics, Calculus).
   \item Fundamental data concepts.
   \item Stages in a Data Science project.
   \item Data Infrastructure.
