--- a/tasks.tex
+++ b/tasks.tex
@@ -7,6 +7,12 @@ out of the scope of this book, I suggest reading \dots. Even restricting ourselv
 discuss only inductive learning, some machine learning tasks comprise a combination of
 fundamental tasks.
 
+Also, we show examples of different inductive biases and how the main learning algorithms
+work -- symbolic (decision trees), spatial (nearest neighbors), statistical (naïve Bayes
+and Bayesian networks), gradient optimization (neural networks.)
+
+\section{Multiclass}
+
 \section{Manifold learning}
 
 \section{Recommender systems}
