Working on gradient descent.

--- a/inductive.tex
+++ b/inductive.tex
@@ -1,4 +1,4 @@
-\chapter{Statistical Learning Theory}
+\chapter{Statistical learning theory}
 
 Recommended reading: IEEE TRANSACTIONS ON NEURAL NETWORKS, VOL. 10, NO. 5, SEPTEMBER 1999
 An Overview of Statistical Learning Theory.
