--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,8 @@
 \usepackage{unicode-math}
 \usepackage{graphicx}
 
+\renewcommand{\vec}[1]{\mathbf{#1}}
+
 \begin{document}
 
 \setmathfont{STIXTwoMath}[
