Working on regression.

--- a/inductive.tex
+++ b/inductive.tex
@@ -82,6 +82,5 @@ functions. For the loss
 we aim at minimizing the risk $\eqref{eq:risk}$ which becomes the probability of
 classification error.
 
-\paragraph{Regression estimation task.} Let the outcome $y$ be a real value and that there exists
-$\alpha$ such that $$f_\alpha(x) = \int y\, dP(y|x) \text{.}$$  The function $f_\alpha$ is
-called \emph{regression}.
+\paragraph{Regression estimation task.} Let the outcome $y$ be a real value and
+the \emph{regression} $r$ be $$r(x) = \int y\, dP(y|x) \text{.}$$
