--- a/courses.tex
+++ b/courses.tex
@@ -3,9 +3,13 @@
 For administrative reasons, I present the course plan for PO-235 and CMC-1X.
 
 \newpage
+\newgeometry{margin=1cm}
+\thispagestyle{empty}
 \section*{PO-235 Data Science Project}
 
 \newpage
+\newgeometry{margin=1cm}
+\thispagestyle{empty}
 \section*{CMC-1X Practical Data Science}
 
 \emph{Course plan}
@@ -55,38 +59,52 @@ Essay describing the development of the case study for the final exam.
   \item John D. Kelleher and Brendan Tierney. Data Science, MIT Press, 2018.
 \end{itemize}
 
+\thispagestyle{empty}
 \paragraph{Recommended reading:}
 \begin{itemize}
+  \item In-progress textbook at \url{https://comp.ita.br/~verri/dsp-book}
   \item \fullcite{Vapnik1999}
   \item \fullcite{Benavoli2017}
 \end{itemize}
 
-\paragraph{Calendar:} \\
+\paragraph{Calendar:} The expected schedule is presented below.
 
-\begin{tabular}{ll}
-  \toprule
-  Week & Topics \\
-  \midrule
-  \multicolumn{2}{c}{\nth{1} Quarter} \\
-  \midrule
-  1 & Brief history of Data Science and CMC-13 review \\
-  2 & Stages in a Data Science project \\
-  3 & Tidy Data and data integration from multiple sources \\
-  4 & Data engineering and shaping \\
-  5 & Inductive learning and Statistical Learning Theory \\
-  6 & Inductive learning and Statistical Learning Theory \\
-  7 & Case study discussion and definitions \\
-  8 & Written test \\
-  \midrule
-  \multicolumn{2}{c}{\nth{2} Quarter} \\
-  \midrule
-  1 & Experimental planning for Data Science \\
-  2 & Model evaluation \\
-  3 & Bayesian Analysis \\
-  4 & Documentation and deployment \\
-  5 & Privacy-preserving computational approaches \\
-  6 & Written test \\
-  7 & Presentations \\
-  8 & Presentations \\
-  \bottomrule
-\end{tabular}
+\begin{center}
+  \begin{tabular}{ll}
+    \toprule
+    \multicolumn{2}{c}{\nth{1} Quarter} \\
+    \midrule
+    Week & Topics \\
+    \midrule
+    1 & Brief history of Data Science and CMC-13 review \\
+    2 & Stages in a Data Science project \\
+    3 & Tidy Data and data integration from multiple sources \\
+    4 & Data engineering and shaping \\
+    5 & Inductive learning and Statistical Learning Theory \\
+    6 & Inductive learning and Statistical Learning Theory \\
+    7 & Case study discussion and definitions \\
+    8 & \bf Written test \\
+    \bottomrule
+  \end{tabular}
+\end{center}
+
+\begin{center}
+  \begin{tabular}{ll}
+    \toprule
+    \multicolumn{2}{c}{\nth{2} Quarter} \\
+    \midrule
+    Week & Topics \\
+    \midrule
+    1 & Experimental planning for Data Science \\
+    2 & Model evaluation \\
+    3 & Bayesian Analysis \\
+    4 & Documentation and deployment \\
+    5 & Privacy-preserving computational approaches \\
+    6 & \bf Written test \\
+    7 & \bf Presentations \\
+    8 & \bf Presentations \\
+    \bottomrule
+  \end{tabular}
+\end{center}
+
+\restoregeometry
