--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \usepackage{graphicx}
 \usepackage[super]{nth}
 \usepackage{booktabs}
+\usepackage{geometry}
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
 \nonfrenchspacing
