Finished course plan.

--- a/courses.tex
+++ b/courses.tex
@@ -7,6 +7,99 @@ For administrative reasons, I present the course plan for PO-235 and CMC-1X.
 \thispagestyle{empty}
 \section*{PO-235 Data Science Project}
 
+\emph{Course plan}
+
+\nth{1} Semester of \the\year{}
+
+Prof. Filipe A. N. Verri
+
+\paragraph{Number of students:} Approx. 20 (hopefully close to 10)
+
+\paragraph{Course load:} 3--0--0--4
+
+\paragraph{Requirements:} Advanced programming skills, strong statistics background, and
+beginner level machine learning skills.
+
+\paragraph{Course program:}
+Brief history of Data Science.  Fundamental data concepts. Stages in a Data Science
+project.  Data Infrastructure. Data integration from multiple sources. Data engineering
+and shaping.  Inductive learning and principles of Statistical Learning Theory.
+Application of Machine Learning models in real-world problems.  Experimental planning for
+Data Science. Model evaluation and Bayesian analysis.  Documentation and deployment.
+Ethical and legal issues in Data Science.  Privacy-preserving computational approaches.
+
+\paragraph{Goals:}
+Providing the theoretical background and the practical concepts to develop an end-to-end
+data science project for an inductive task.
+
+\paragraph{Teaching methodology:}
+Expository classes in common classroom, using whiteboard, slide presentations, coding
+examples, books and scientific papers. Supplementary didactic materials will be available
+in Google Classroom. The development of the case study will happen during home study
+hours, including programming and scientific paper writing.
+
+\paragraph{Grading:} Two written tests in the \nth{1} and one in the \nth{2} quarter.
+Scientific paper and oral presentation about the case study for the final exam.
+
+\paragraph{Bibliography:}
+\begin{itemize}
+  \item Nina Zumel and John Mount. Practical Data Science with R. Manning, 2nd Edition, 2019.
+  \item Hadley Wickham and Garret Grolemund, R for Data Science: Import, Tidy, Transform, Visualize, and Model Data. O’Reilly Media, 2017.
+  \item John D. Kelleher and Brendan Tierney. Data Science, MIT Press, 2018.
+\end{itemize}
+
+\thispagestyle{empty}
+\paragraph{Must read:}
+\begin{itemize}
+  \item In-progress textbook at \url{https://comp.ita.br/~verri/dsp-book}
+  \item \fullcite{Vapnik1999}
+  \item \fullcite{Benavoli2017}
+\end{itemize}
+
+\paragraph{Calendar:} The expected schedule is presented below.
+
+\begin{center}
+  \begin{tabular}{ll}
+    \toprule
+    \multicolumn{2}{c}{\nth{1} Quarter} \\
+    \midrule
+    Week & Topics \\
+    \midrule
+    1 & Brief history of Data Science and background topics \\
+    2 & \bf Written test \\
+    3 & Fundamental data concepts and stages in a Data Science project \\
+    4 & Inductive learning and Statistical Learning Theory \\
+    5 & Inductive learning and Statistical Learning Theory \\
+    6 & Data infrastructure and data integration from multiple sources \\
+    7 & Data engineering and shaping \\
+    8 & \bf Written test \\
+    \bottomrule
+  \end{tabular}
+\end{center}
+
+\begin{center}
+  \begin{tabular}{ll}
+    \toprule
+    \multicolumn{2}{c}{\nth{2} Quarter} \\
+    \midrule
+    Week & Topics \\
+    \midrule
+    1 & Application of Machine Learning models in real-world problems \\
+    2 & Application of Machine Learning models in real-world problems \\
+    3 & Experimental planning for Data Science \\
+    4 & Experimental planning for Data Science \\
+    5 & Model evaluation and Bayesian analysis \\
+    6 & Model evaluation and Bayesian analysis \\
+    7 & \bf Written test \\
+    8 & Documentation and deployment \\
+      & Ethical and legal issues in Data Science \\
+      & Privacy-preserving computational approaches \\
+    \bottomrule
+  \end{tabular}
+\end{center}
+
+Case study will be presented during exam weeks.
+
 \newpage
 \newgeometry{margin=1cm}
 \thispagestyle{empty}
@@ -50,7 +143,8 @@ in Google Classroom. The development of the case study will happen during labora
 classes and home study hours, including programming and writing essays.
 
 \paragraph{Grading:} One written test in the \nth{1} and one in the \nth{2} quarter.
-Essay describing the development of the case study for the final exam.
+Essay describing the development of the case study and oral presentation for the final
+exam.
 
 \paragraph{Bibliography:}
 \begin{itemize}
