Data science definition.

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \usepackage[super]{nth}
 \usepackage{booktabs}
 \usepackage{geometry}
+\usepackage{csquotes}
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
 \nonfrenchspacing
@@ -41,6 +42,7 @@
 \input{courses}
 \input{history}
 \input{preliminaries}
+\input{data}
 \input{inductive}
 \input{tasks}
 
