--- a/references.bib
+++ b/references.bib
@@ -18,3 +18,17 @@
   number={5},
   pages={988-999},
   doi={10.1109/72.788640}}
+
+@book{Zumel2019,
+  author={Nina Zumel and John Mount},
+  title={Practical Data Science with {R}},
+  year={2019},
+  publisher={Manning},
+  edition=2}
+
+@book{Hickham2023,
+  author={Hadley Wickham and Mine Çetinkaya-Rundel and Garrett Grolemund},
+  title={R for Data Science: Import, Tidy, Transform, Visualize, and Model Data},
+  year={2023},
+  publisher={O'Reilly Media},
+  edition=2}
