--- a/courses.tex
+++ b/courses.tex
@@ -51,9 +51,9 @@ Scientific paper and oral presentation about the case study for the final exam.
 \thispagestyle{empty}
 \paragraph{Must read:}
 \begin{itemize}
-  \item In-progress textbook at \url{https://comp.ita.br/~verri/dsp-book}
-  \item \fullcite{Vapnik1999}
-  \item \fullcite{Benavoli2017}
+  \item In-progress textbook at \url{https://comp.ita.br/~verri/dsp-book}.
+  \item \fullcite{Vapnik1999}.
+  \item \fullcite{Benavoli2017}.
 \end{itemize}
 
 \paragraph{Calendar:} The expected schedule is presented below.
@@ -61,17 +61,23 @@ Scientific paper and oral presentation about the case study for the final exam.
 \begin{center}
   \begin{tabular}{ll}
     \toprule
-    \multicolumn{2}{c}{\nth{1} Quarter} \\
+    \multicolumn{2}{c}{\bf \nth{1} Quarter} \\
     \midrule
     Week & Topics \\
     \midrule
     1 & Brief history of Data Science and background topics \\
+    \midrule
     2 & \bf Written test \\
+    \midrule
     3 & Fundamental data concepts and stages in a Data Science project \\
-    4 & Inductive learning and Statistical Learning Theory \\
-    5 & Inductive learning and Statistical Learning Theory \\
+    \midrule
+    4 & \multirow{2}{*}{Inductive learning and Statistical Learning Theory} \\
+    5 &  \\
+    \midrule
     6 & Data infrastructure and data integration from multiple sources \\
+    \midrule
     7 & Data engineering and shaping \\
+    \midrule
     8 & \bf Written test \\
     \bottomrule
   \end{tabular}
@@ -80,25 +86,29 @@ Scientific paper and oral presentation about the case study for the final exam.
 \begin{center}
   \begin{tabular}{ll}
     \toprule
-    \multicolumn{2}{c}{\nth{2} Quarter} \\
+    \multicolumn{2}{c}{\bf \nth{2} Quarter} \\
     \midrule
     Week & Topics \\
     \midrule
-    1 & Application of Machine Learning models in real-world problems \\
-    2 & Application of Machine Learning models in real-world problems \\
-    3 & Experimental planning for Data Science \\
-    4 & Experimental planning for Data Science \\
-    5 & Model evaluation and Bayesian analysis \\
-    6 & Model evaluation and Bayesian analysis \\
+    1 & \multirow{2}{*}{Application of Machine Learning models in real-world problems} \\
+    2 &  \\
+    \midrule
+    3 & \multirow{2}{*}{Experimental planning for Data Science} \\
+    4 & \\
+    \midrule
+    5 & \multirow{2}{*}{Model evaluation and Bayesian analysis} \\
+    6 & \\
+    \midrule
     7 & \bf Written test \\
-    8 & Documentation and deployment \\
+    \midrule
+    \multirow{3}{*}{8} & Documentation and deployment \\
       & Ethical and legal issues in Data Science \\
       & Privacy-preserving computational approaches \\
     \bottomrule
   \end{tabular}
 \end{center}
 
-Case study will be presented during exam weeks.
+Case studies will be presented during exam weeks.
 
 \newpage
 \newgeometry{margin=1cm}
@@ -156,9 +166,9 @@ exam.
 \thispagestyle{empty}
 \paragraph{Recommended reading:}
 \begin{itemize}
-  \item In-progress textbook at \url{https://comp.ita.br/~verri/dsp-book}
-  \item \fullcite{Vapnik1999}
-  \item \fullcite{Benavoli2017}
+  \item In-progress textbook at \url{https://comp.ita.br/~verri/dsp-book}.
+  \item \fullcite{Vapnik1999}.
+  \item \fullcite{Benavoli2017}.
 \end{itemize}
 
 \paragraph{Calendar:} The expected schedule is presented below.
@@ -166,7 +176,7 @@ exam.
 \begin{center}
   \begin{tabular}{ll}
     \toprule
-    \multicolumn{2}{c}{\nth{1} Quarter} \\
+    \multicolumn{2}{c}{\bf \nth{1} Quarter} \\
     \midrule
     Week & Topics \\
     \midrule
@@ -174,8 +184,8 @@ exam.
     2 & Stages in a Data Science project \\
     3 & Tidy Data and data integration from multiple sources \\
     4 & Data engineering and shaping \\
-    5 & Inductive learning and Statistical Learning Theory \\
-    6 & Inductive learning and Statistical Learning Theory \\
+    5 & \multirow{2}{*}{Inductive learning and Statistical Learning Theory} \\
+    6 &  \\
     7 & Case study discussion and definitions \\
     8 & \bf Written test \\
     \bottomrule
@@ -185,7 +195,7 @@ exam.
 \begin{center}
   \begin{tabular}{ll}
     \toprule
-    \multicolumn{2}{c}{\nth{2} Quarter} \\
+    \multicolumn{2}{c}{\bf \nth{2} Quarter} \\
     \midrule
     Week & Topics \\
     \midrule
@@ -195,8 +205,8 @@ exam.
     4 & Documentation and deployment \\
     5 & Privacy-preserving computational approaches \\
     6 & \bf Written test \\
-    7 & \bf Presentations \\
-    8 & \bf Presentations \\
+    7 & \multirow{2}{*}{\bf Presentations and discussions} \\
+    8 & \\
     \bottomrule
   \end{tabular}
 \end{center}
