--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \usepackage{booktabs}
 \usepackage{geometry}
 \usepackage{csquotes}
+\usepackage{multirow}
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
 \nonfrenchspacing
