Some small fixes in course plan.

--- a/courses.tex
+++ b/courses.tex
@@ -38,7 +38,7 @@ examples, books and scientific papers. Supplementary didactic materials will be 
 in Google Classroom. The development of the case study will happen during home study
 hours, including programming and scientific paper writing.
 
-\paragraph{Grading:} Two written tests in the \nth{1} and one in the \nth{2} quarter.
+\paragraph{Grading:} Two individual written tests in the \nth{1} and another in the \nth{2} quarter.
 Scientific paper and oral presentation about the case study for the final exam.
 
 \paragraph{Bibliography:}
@@ -140,7 +140,7 @@ the mathematical foundations to ensure the correct usage of Data Science techniq
 
 The specific goals are:
 \begin{itemize}
-  \item Understanding the steps in a Data Science project;
+  \item Understanding the steps and people involved in Data Science projects;
   \item Developing an end-to-end case study, including data collection, data transformation,
     inductive learning, validation, documentation, and deployment; and
   \item Critically evaluate the results and implications of the case study.
@@ -152,9 +152,8 @@ examples, books and scientific papers. Supplementary didactic materials will be 
 in Google Classroom. The development of the case study will happen during laboratory
 classes and home study hours, including programming and writing essays.
 
-\paragraph{Grading:} One written test in the \nth{1} and one in the \nth{2} quarter.
-Essay describing the development of the case study and oral presentation for the final
-exam.
+\paragraph{Grading:} One individual written test in the \nth{1} and another in the \nth{2} quarter.
+Essay and oral presentation about the case study (in groups) for the final exam.
 
 \paragraph{Bibliography:}
 \begin{itemize}
