--- a/data.tex
+++ b/data.tex
@@ -22,13 +22,13 @@ I find the first definition too restrictive once new methods and techniques are 
 under development.  We never know when new ``data-related'' methods will become obsolete
 or a trend.  Also, \textcite{Zumel2019}'s view gives the impression that data science is a
 operations research subfield.  Although I will not try to prove otherwise, I think it will
-be much more useful to see it as an independent field of study.  (Obviously, there will be
-many intersections between both areas, but I will try my best to keep definitions and
+be much more useful to see it as an independent field of study.  Obviously, there will be
+many intersections between both areas (and many other areas as well), but I will try my best to keep definitions and
 terms standardized throughout chapters, sometimes avoiding popular terms that may generate
-ambiguities or confusion.)
+ambiguities or confusion.
 
 The second one is not really a definition.  However, it states clearly \emph{what} data
-science enables us to do.  From this thought, let's define the term.
+science enables us to do.  From these thoughts, let's define the term.
 
 \begin{displayquote}
   \em
@@ -43,3 +43,15 @@ problems.  \emph{Measurable phenomena} are events or processes where raw data ca
 quantified in some way.  \emph{Raw data} are data collected directly from some source and
 that have not been subject to any other manipulation by a software program or a human
 expert.
+
+Data science contrasts with conventional sciences.  Usually, a ``science'' is named after
+its object of study.  Biology is the study of the life, earth science studies the planet
+Earth, and so on.  I argue that data science does not study data itself, but how we can
+``listen'' them to understand a phenomenon.  The conventional scientific paradigm is
+essentially model driven: we observe the phenomenon, we reason the possible explanation
+(the model,) and we validate our hypothesis (most of the time using data.)  Data science,
+however, studies the computational processes that can extract the knowledge mainly (and
+primarily) from the data.  The expert knowledge is taken into account, but we give data
+the opportunity to surprise us.  Thus, the object of the study of data science are the
+computational methods and processes that can extract reliable knowledge from amounts of
+data we would never be able to analyse ``by hand.''
