--- a/data.tex
+++ b/data.tex
@@ -48,10 +48,10 @@ Data science contrasts with conventional sciences.  Usually, a ``science'' is na
 its object of study.  Biology is the study of the life, earth science studies the planet
 Earth, and so on.  I argue that data science does not study data itself, but how we can
 ``listen'' them to understand a phenomenon.  The conventional scientific paradigm is
-essentially model driven: we observe the phenomenon, we reason the possible explanation
-(the model,) and we validate our hypothesis (most of the time using data.)  Data science,
-however, studies the computational processes that can extract the knowledge mainly (and
-primarily) from the data.  The expert knowledge is taken into account, but we give data
-the opportunity to surprise us.  Thus, the object of the study of data science are the
-computational methods and processes that can extract reliable knowledge from amounts of
-data we would never be able to analyse ``by hand.''
+essentially model-driven: we observe a phenomenon related to the object of study, we
+reason the possible explanation (the model or hypothesis,) and we validate our hypothesis
+(most of the time using data, though.)  In data science, however, we extract the knowledge
+directly and primarily from the data.  The expert knowledge and reasoning may be taken
+into account, but we give data the opportunity to surprise us.  Thus, the object of the
+study of data science are the computational methods and processes that can extract
+reliable knowledge from amounts of data we would never be able to analyse ``by hand.''
